--- a/index.html
+++ b/index.html
@@ -57,12 +57,7 @@
         </div>
         <div class="discord">
             <h1>TheTimeVortex Discord!</h1>
-            <p>Join our vibrant community of gamers, creators, and fans of TheDoctor's Twitch and YouTube channels.
-                Whether you're here to dive into engaging discussions, share your favorite memes, or participate in
-                exciting events and giveaways, you'll find a welcoming space with us.
-                Our dedicated moderators work tirelessly to ensure a safe and inclusive environment for everyone.
-                Connect with like-minded individuals, discover new content, and make lasting friendships.
-                Come be a part of TheTimeVortex community and let's have fun together!</p>
+            <p>Join the Discord server to be notified when I go live on Twitch and Youtube, or just hangout with people talking, gaming or even watching stuff. It's a place to just have fun and leave all the drama and problems behind. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord
                     Server</a></h3>
