Updated Font size and family

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             }
         })();
     </script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 
 
 </head>
@@ -53,11 +57,13 @@
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="icons/TheDoctor-PFP-Fall.webp" alt="TheDoctorTTV">
-            </div>  
+            </div>
         </div>
         <div class="discord">
             <h1>TheTimeVortex Discord!</h1>
-            <p>Join the Discord server to be notified when I go live on Twitch and Youtube, or just hangout with people talking, gaming or even watching stuff. It's a place to just have fun and leave all the drama and problems behind. </p>
+            <p>Join the Discord server to be notified when I go live on Twitch and Youtube, or just hangout with people
+                talking, gaming or even watching stuff. It's a place to just have fun and leave all the drama and
+                problems behind. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord
                     Server</a></h3>
