--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -11,7 +11,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
-    <meta property="og:description" content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+    <meta property="og:description"
+        content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
@@ -26,6 +27,11 @@
             }
         })();
     </script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -34,27 +40,32 @@
     <div class="container">
         <div class="minecraft-section">
             <h1>TheTimeVortex Create Modpack</h1>
-<br>
+            <br>
             <h3>Launcher Installation</h3>
             <ul>
-                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a></li>
-                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create" target="_blank">CurseForge Download</a></li>
+                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
+                </li>
+                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
+                        target="_blank">CurseForge Download</a></li>
             </ul>
-<br>
+            <br>
             <h3>Manual Installation</h3>
             <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual.zip" target="_blank">Manual Download</a></li>
-                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar" target="_blank">Forge Installer</a></li>
+                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual.zip"
+                        target="_blank">Manual Download</a></li>
+                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
+                        target="_blank">Forge Installer</a></li>
             </ul>
-<br>
+            <br>
             <h3>Important Information</h3>
             <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
             <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-<br>
+            <br>
             <h3>TheTimeVortex Create Server</h3>
             <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
             <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
+            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
+                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
         </div>
     </div>
     <br><br>
