--- a/discord-bot-terms.html
+++ b/discord-bot-terms.html
@@ -18,16 +18,21 @@
   <script src="header-footer.js"></script>
   <script type="text/javascript" src="darkmode.js" defer></script>
   <script>
-    (function() {
-        const darkmode = localStorage.getItem('darkmode');
-        const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    (function () {
+      const darkmode = localStorage.getItem('darkmode');
+      const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
 
-        if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
-            document.documentElement.classList.add('darkmode');
-        }
+      if (darkmode === 'dark' || (darkmode === 'system' && systemPrefersDark)) {
+        document.documentElement.classList.add('darkmode');
+      }
     })();
-</script>
+  </script>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
 
 </head>
 
