--- a/socials.html
+++ b/socials.html
@@ -27,7 +27,10 @@
                         }
                 })();
         </script>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+                rel="stylesheet">
 
 </head>
 
@@ -40,14 +43,14 @@
                         <br><br>
                         <li class="social-page-icons">
                                 <ul>
-                                        <a href="https://youtube.com/@thedoctorttv" target="_blank"> <img
+                                        <a href="https://youtube.com/@thedoctorttv" target="_blank"><img
                                                         src="icons/youtube.svg" alt="Youtube"></a>
                                         <a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
                                                         src="icons/twitch.svg" alt="Twitch"></a>
                                         <a href="https://twitter.com/thedoctorttv" target="_blank"> <img
                                                         src="icons/twitter.svg" alt="Twitter"></a>
-                                        <a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank"> <img
-                                                        src="icons/Bluesky_Logo.svg" alt="Twitter"></a>
+                                        <a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank">
+                                                <img src="icons/Bluesky_Logo.svg" alt="Twitter"></a>
                                         <a href="https://www.instagram.com/thedoctorttv/" target="_blank"> <img
                                                         src="icons/Instagram_Glyph_Gradient.svg" alt="Instagram"></a>
                                         <a class="github" href="https://github.com/TheDoctorTTV" target="_blank"><img
