Added VRC group link

--- a/socials.html
+++ b/socials.html
@@ -62,6 +62,8 @@
                                                         alt='Buy Me a Coffee at ko-fi.com' /></a>
                                         <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
                                                 target="_blank"><img src="icons/vrchat.svg" alt="VRChat Profile"></a>
+                                        <a href="https://vrc.group/DOCTOR.2543"
+                                                target="_blank"><img src="icons/vrchat-group.svg" alt="VRChat Profile"></a>
                                         <a href="https://www.livechart.me/users/TheDoctorTTV/library"
                                                 target="_blank"><img src="icons/LiveChart.webp" alt="LiveChart"></a>
                                         <a href="https://discord.com/invite/UVqyGsf" target="_blank"><img
