--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -51,7 +51,7 @@
             <br>
             <h3>Manual Installation</h3>
             <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual.zip"
+                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual.7z"
                         target="_blank">Manual Download</a></li>
                 <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
                         target="_blank">Forge Installer</a></li>
