--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 used. (No offense to those who use them.)
             </p>
             <div class="pfp-container">
-                <img class="pfp" src="icons/TheDoctor-PFP-Fall.webp" alt="TheDoctorTTV">
+                <img class="pfp" src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
             </div>
         </div>
         <div class="discord">
