--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 talking, gaming or even watching stuff. It's a place to just have fun and leave all the drama and
                 problems behind. </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://discord.com/invite/UVqyGsf" target="_blank">Join The Discord
+            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join The Discord
                     Server</a></h3>
         </div>
     </div>
