--- a/stream-vods.html
+++ b/stream-vods.html
@@ -27,19 +27,23 @@
             }
         })();
     </script>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 
 
 </head>
 
 <body>
     <global-header></global-header>
-    <div class="container">
-        <div class="schedule">
-            <img src="https://cdn.thetimevortex.net/Stream-Schedule.png" alt="Stream-Schedule">
-        </div>
+    <div class="banner-container">
+        <img class="Banner" src="backgrounds/Welcome to the time vortex.webp" alt="TheTimeVortexBanner">
     </div>
-
+    <div class="container">
+        
+    </div>
     <global-footer></global-footer>
 </body>
 
