Header and Banner Update

--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -36,8 +36,8 @@
 
 <body>
     <global-header></global-header>
-
     <div class="container">
+        <div class="banner-container"></div>
         <div class="minecraft-section">
             <h1>TheTimeVortex Create Modpack</h1>
             <br>
