--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
 
 <body>
     <global-header></global-header>
-    <div class="banner-container">
-        <img class="Banner" src="backgrounds/Welcome to the time vortex.webp" alt="TheTimeVortexBanner">
-    </div>
     <div class="container">
-
+        <div class="banner-container"></div>
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
