--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <body>
     <global-header></global-header>
+<!-- <--------------------------------Main Page Section-----------------------------------------------------------------------------------------------------------------> 
     <div class="container">
         <div class="banner-container"></div>
         <div class="main">
@@ -66,6 +67,138 @@
                     Server</a></h3>
         </div>
     </div>
+<!-- <--------------------------------Social Page Section----------------------------------------------------------------------------------------------------------------> 
+    <div class="social-container">
+        <div class="socials">
+                <h1>TheDoctorTTV's Social Media</h1>
+                <br><br>
+                <li>
+                        <ul class="social-page-icons">
+                                <div class="card"><a href="https://youtube.com/@thedoctorttv"
+                                                target="_blank"><img src="icons/youtube.svg"
+                                                        alt="Youtube"></a>Youtube</div>
+
+                                <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
+                                                        src="icons/twitch.svg" alt="Twitch"></a>Twitch</div>
+
+                                <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
+                                                        src="icons/kick-logo.svg" alt="Kick"></a>Kick</div>
+
+                                <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
+                                                <img src="icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
+
+                                <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social"
+                                                target="_blank"><img src="icons/Bluesky_Logo.svg"
+                                                        alt="BlueSky"></a>BlueSky</div>
+
+                                <div class="card"><a href="https://www.instagram.com/thedoctorttv/"
+                                                target="_blank"><img class="theme-icon"
+                                                        src="icons/Instagram_Glyph_Black.svg"
+                                                        data-light-icon="icons/Instagram_Glyph_Black.svg"
+                                                        data-dark-icon="icons/Instagram_Glyph_White.svg"
+                                                        alt="Instagram"></a>Instagram</div>
+
+                                <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img
+                                                        class="theme-icon" src="icons/github-mark.svg"
+                                                        data-light-icon="icons/github-mark.svg"
+                                                        data-dark-icon="icons/github-mark-white.svg"
+                                                        alt="GitHub"></a>Github</div>
+
+                                <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
+                                                        src='icons/Throne Icon - Single (Gradient).svg'
+                                                        alt='My Wishlist' /></a>Throne</div>
+
+                                <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img
+                                                        src='icons/ko-fi.svg'
+                                                        alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
+
+                                <div class="card"><a
+                                                href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
+                                                target="_blank"><img src="icons/vrchat.svg"
+                                                        alt="VRChat Profile"></a>VRChat</div>
+
+                                <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
+                                                        src="icons/vrchat-group.svg"
+                                                        alt="VRChat Profile"></a>Group</div>
+
+                                <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library"
+                                                target="_blank"><img src="icons/LiveChart.webp"
+                                                        alt="LiveChart"></a>Anime</div>
+
+                                <div class="card"><a href="https://thetimevortex.net/discord"
+                                                target="_blank"><img src="icons/Discord.svg"
+                                                        alt="Discord Server"></a>Discord</div>
+                        </ul>
+                </li>
+
+        </div>
+        <script>
+                const injectCursorPosition = ({ x, y }) => {
+                        document.documentElement.style.setProperty('--x', Math.round(x) + 'px');
+                        document.documentElement.style.setProperty('--y', Math.round(y) + 'px');
+                };
+
+                document.body.addEventListener('pointermove', injectCursorPosition);
+        </script>
+
+        <script>
+                function updateIconsForTheme(isDark) {
+                        document.querySelectorAll('.theme-icon').forEach(img => {
+                                const newSrc = isDark ? img.dataset.darkIcon : img.dataset.lightIcon;
+                                if (img.src !== newSrc) img.src = newSrc;
+                        });
+                }
+
+                // Detect current theme
+                const darkPref = localStorage.getItem('darkmode');
+                const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+                const isDark = darkPref === 'dark' || (darkPref === 'system' && systemDark);
+
+                updateIconsForTheme(isDark);
+
+                // Auto-update icons on theme toggle
+                const observer = new MutationObserver(() => {
+                        const isNowDark = document.documentElement.classList.contains('darkmode');
+                        updateIconsForTheme(isNowDark);
+                });
+
+                observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+        </script>
+</div>
+<!-- <--------------------------------MC Server Page Section-----------------------------------------------------------------------------------------------> 
+
+<div class="mc-container">
+    <div class="minecraft-section">
+        <h1>TheTimeVortex Create Modpack</h1>
+        <br>
+        <h3>Launcher Installation</h3>
+        <ul>
+            <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
+            </li>
+            <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
+                    target="_blank">CurseForge Download</a></li>
+        </ul>
+        <br>
+        <h3>Manual Installation</h3>
+        <ul>
+            <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
+                    target="_blank">Manual Download</a></li>
+            <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
+                    target="_blank">Forge Installer</a></li>
+        </ul>
+        <br>
+        <h3>Important Information</h3>
+        <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
+        <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
+        <br>
+        <h3>TheTimeVortex Create Server</h3>
+        <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
+        <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
+        <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
+            mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
+    </div>
+</div>
+
 
     <global-footer></global-footer>
 </body>
