--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@
 
 <body>
     <global-header></global-header>
-<!-- <--------------------------------Main Page Section-----------------------------------------------------------------------------------------------------------------> 
+
     <div class="container">
         <div class="banner-container"></div>
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hello, I’m TheDoctor, this site is a place to learn more about me and stay connected through my YouTube,
-                Twitch, Discord Server or other of my Social Media. My lore is that I am a Time Lord who became a Demon
-                Lord and on my 121,027th
-                regeneration. <br><br>
-                I’m a massive weeb who has watched countless anime, keeps up with new releases, and dives into tons of
-                manga and light novels. Fun fact: I built this entire website myself using HTML—no Wix, Squarespace or
-                anyother website builders
-                used. (No offense to those who use them.)
+                Hey, I'm TheDoctor, and this site's all about me! You can learn more about me and stay in touch through
+                my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
+                this is my 121,027th regeneration.
+                <br><br>
+                I'm a huge weeb, I've seen tons of anime, I'm always checking out new stuff, and I'm into manga and
+                light novels. Oh, and fun fact: I built this whole website myself with HTML, no Wix, Squarespace, or
+                anything like that. (No hate to those who use 'em, though.)
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
@@ -59,145 +58,131 @@
         </div>
         <div class="discord">
             <h1>TheTimeVortex Discord!</h1>
-            <p>Join the Discord server to be notified when I go live on Twitch and Youtube, or just hangout with people
-                talking, gaming or even watching stuff. It's a place to just have fun and leave all the drama and
-                problems behind. </p>
+            <p>Come join the Discord server! You'll get notified when I'm live on Twitch and YouTube, or you can just
+                chill with us, talk, game, or watch stuff. It's all about having fun and forgetting about the drama, you
+                know? </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join The Discord
-                    Server</a></h3>
+            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
     </div>
-<!-- <--------------------------------Social Page Section----------------------------------------------------------------------------------------------------------------> 
+
     <div class="social-container">
         <div class="socials">
-                <h1>TheDoctorTTV's Social Media</h1>
-                <br><br>
-                <li>
-                        <ul class="social-page-icons">
-                                <div class="card"><a href="https://youtube.com/@thedoctorttv"
-                                                target="_blank"><img src="icons/youtube.svg"
-                                                        alt="Youtube"></a>Youtube</div>
+            <h1>TheDoctorTTV's Social Media</h1>
+            <br><br>
+            <li>
+                <ul class="social-page-icons">
+                    <div class="card"><a href="https://youtube.com/@thedoctorttv" target="_blank"><img
+                                src="icons/youtube.svg" alt="Youtube"></a>Youtube</div>
 
-                                <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
-                                                        src="icons/twitch.svg" alt="Twitch"></a>Twitch</div>
+                    <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
+                                src="icons/twitch.svg" alt="Twitch"></a>Twitch</div>
 
-                                <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
-                                                        src="icons/kick-logo.svg" alt="Kick"></a>Kick</div>
+                    <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
+                                src="icons/kick-logo.svg" alt="Kick"></a>Kick</div>
 
-                                <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
-                                                <img src="icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
+                    <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
+                            <img src="icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
 
-                                <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social"
-                                                target="_blank"><img src="icons/Bluesky_Logo.svg"
-                                                        alt="BlueSky"></a>BlueSky</div>
+                    <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank"><img
+                                src="icons/Bluesky_Logo.svg" alt="BlueSky"></a>BlueSky</div>
 
-                                <div class="card"><a href="https://www.instagram.com/thedoctorttv/"
-                                                target="_blank"><img class="theme-icon"
-                                                        src="icons/Instagram_Glyph_Black.svg"
-                                                        data-light-icon="icons/Instagram_Glyph_Black.svg"
-                                                        data-dark-icon="icons/Instagram_Glyph_White.svg"
-                                                        alt="Instagram"></a>Instagram</div>
+                    <div class="card"><a href="https://www.instagram.com/thedoctorttv/" target="_blank"><img
+                                class="theme-icon" src="icons/Instagram_Glyph_Black.svg"
+                                data-light-icon="icons/Instagram_Glyph_Black.svg"
+                                data-dark-icon="icons/Instagram_Glyph_White.svg" alt="Instagram"></a>Instagram</div>
 
-                                <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img
-                                                        class="theme-icon" src="icons/github-mark.svg"
-                                                        data-light-icon="icons/github-mark.svg"
-                                                        data-dark-icon="icons/github-mark-white.svg"
-                                                        alt="GitHub"></a>Github</div>
+                    <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img class="theme-icon"
+                                src="icons/github-mark.svg" data-light-icon="icons/github-mark.svg"
+                                data-dark-icon="icons/github-mark-white.svg" alt="GitHub"></a>Github</div>
 
-                                <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
-                                                        src='icons/Throne Icon - Single (Gradient).svg'
-                                                        alt='My Wishlist' /></a>Throne</div>
+                    <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
+                                src='icons/Throne Icon - Single (Gradient).svg' alt='My Wishlist' /></a>Throne</div>
 
-                                <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img
-                                                        src='icons/ko-fi.svg'
-                                                        alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
+                    <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='icons/ko-fi.svg'
+                                alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
 
-                                <div class="card"><a
-                                                href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
-                                                target="_blank"><img src="icons/vrchat.svg"
-                                                        alt="VRChat Profile"></a>VRChat</div>
+                    <div class="card"><a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
+                            target="_blank"><img src="icons/vrchat.svg" alt="VRChat Profile"></a>VRChat</div>
 
-                                <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
-                                                        src="icons/vrchat-group.svg"
-                                                        alt="VRChat Profile"></a>Group</div>
+                    <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
+                                src="icons/vrchat-group.svg" alt="VRChat Profile"></a>Group</div>
 
-                                <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library"
-                                                target="_blank"><img src="icons/LiveChart.webp"
-                                                        alt="LiveChart"></a>Anime</div>
+                    <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img
+                                src="icons/LiveChart.webp" alt="LiveChart"></a>Anime</div>
 
-                                <div class="card"><a href="https://thetimevortex.net/discord"
-                                                target="_blank"><img src="icons/Discord.svg"
-                                                        alt="Discord Server"></a>Discord</div>
-                        </ul>
-                </li>
+                    <div class="card"><a href="https://thetimevortex.net/discord" target="_blank"><img
+                                src="icons/Discord.svg" alt="Discord Server"></a>Discord</div>
+                </ul>
+            </li>
 
         </div>
         <script>
-                const injectCursorPosition = ({ x, y }) => {
-                        document.documentElement.style.setProperty('--x', Math.round(x) + 'px');
-                        document.documentElement.style.setProperty('--y', Math.round(y) + 'px');
-                };
+            const injectCursorPosition = ({ x, y }) => {
+                document.documentElement.style.setProperty('--x', Math.round(x) + 'px');
+                document.documentElement.style.setProperty('--y', Math.round(y) + 'px');
+            };
 
-                document.body.addEventListener('pointermove', injectCursorPosition);
+            document.body.addEventListener('pointermove', injectCursorPosition);
         </script>
 
         <script>
-                function updateIconsForTheme(isDark) {
-                        document.querySelectorAll('.theme-icon').forEach(img => {
-                                const newSrc = isDark ? img.dataset.darkIcon : img.dataset.lightIcon;
-                                if (img.src !== newSrc) img.src = newSrc;
-                        });
-                }
-
-                // Detect current theme
-                const darkPref = localStorage.getItem('darkmode');
-                const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-                const isDark = darkPref === 'dark' || (darkPref === 'system' && systemDark);
-
-                updateIconsForTheme(isDark);
-
-                // Auto-update icons on theme toggle
-                const observer = new MutationObserver(() => {
-                        const isNowDark = document.documentElement.classList.contains('darkmode');
-                        updateIconsForTheme(isNowDark);
+            function updateIconsForTheme(isDark) {
+                document.querySelectorAll('.theme-icon').forEach(img => {
+                    const newSrc = isDark ? img.dataset.darkIcon : img.dataset.lightIcon;
+                    if (img.src !== newSrc) img.src = newSrc;
                 });
+            }
 
-                observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
+            // Detect current theme
+            const darkPref = localStorage.getItem('darkmode');
+            const systemDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            const isDark = darkPref === 'dark' || (darkPref === 'system' && systemDark);
+
+            updateIconsForTheme(isDark);
+
+            // Auto-update icons on theme toggle
+            const observer = new MutationObserver(() => {
+                const isNowDark = document.documentElement.classList.contains('darkmode');
+                updateIconsForTheme(isNowDark);
+            });
+
+            observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
         </script>
-</div>
-<!-- <--------------------------------MC Server Page Section-----------------------------------------------------------------------------------------------> 
-
-<div class="mc-container">
-    <div class="minecraft-section">
-        <h1>TheTimeVortex Create Modpack</h1>
-        <br>
-        <h3>Launcher Installation</h3>
-        <ul>
-            <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
-            </li>
-            <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
-                    target="_blank">CurseForge Download</a></li>
-        </ul>
-        <br>
-        <h3>Manual Installation</h3>
-        <ul>
-            <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
-                    target="_blank">Manual Download</a></li>
-            <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
-                    target="_blank">Forge Installer</a></li>
-        </ul>
-        <br>
-        <h3>Important Information</h3>
-        <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
-        <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-        <br>
-        <h3>TheTimeVortex Create Server</h3>
-        <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
-        <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-        <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
-            mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
     </div>
-</div>
+
+
+    <div class="mc-container">
+        <div class="minecraft-section">
+            <h1>TheTimeVortex Create Modpack</h1>
+            <br>
+            <h3>Launcher Installation</h3>
+            <ul>
+                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
+                </li>
+                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
+                        target="_blank">CurseForge Download</a></li>
+            </ul>
+            <br>
+            <h3>Manual Installation</h3>
+            <ul>
+                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
+                        target="_blank">Manual Download</a></li>
+                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
+                        target="_blank">Forge Installer</a></li>
+            </ul>
+            <br>
+            <h3>Important Information</h3>
+            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
+            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
+            <br>
+            <h3>TheTimeVortex Create Server</h3>
+            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
+            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
+            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
+                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
+        </div>
+    </div>
 
 
     <global-footer></global-footer>
