Rebrand to a group

--- a/index.html
+++ b/index.html
@@ -42,25 +42,16 @@
     <div class="container">
         <div class="banner-container"></div>
         <div class="main">
-            <h1>About Me</h1>
+            <h1>About Us</h1>
             <p class="about-me">
-                Hey, I'm TheDoctor, and this site's all about me! You can learn more about me and stay in touch through
-                my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
-                this is my 121,027th regeneration.
-                <br><br>
-                I'm a huge weeb, I've seen tons of anime, I'm always checking out new stuff, and I'm into manga and
-                light novels. Oh, and fun fact: I built this whole website myself with HTML, no Wix, Squarespace, or
-                anything like that. (No hate to those who use 'em, though.)
+                We’re a group of creators, each bringing our own style and passion. 
+                Together, we aim to entertain, connect, and create something bigger than ourselves
             </p>
-            <div class="pfp-container">
-                <img class="pfp" src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
-            </div>
         </div>
         <div class="discord">
             <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when I'm live on Twitch and YouTube, or you can just
-                chill with us, talk, game, or watch stuff. It's all about having fun and forgetting about the drama, you
-                know? </p>
+            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or any other plarforms that they may
+                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun and forgetting about the drama.</p>
             <br><br>
             <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
@@ -68,51 +59,12 @@
 
     <div class="social-container">
         <div class="socials">
-            <h1>TheDoctorTTV's Social Media</h1>
+            <h1>Meet Our Creators</h1>
             <br><br>
             <li>
                 <ul class="social-page-icons">
-                    <div class="card"><a href="https://youtube.com/@thedoctorttv" target="_blank"><img
-                                src="icons/youtube.svg" alt="Youtube"></a>Youtube</div>
-
-                    <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
-                                src="icons/twitch.svg" alt="Twitch"></a>Twitch</div>
-
-                    <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
-                                src="icons/kick-logo.svg" alt="Kick"></a>Kick</div>
-
-                    <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
-                            <img src="icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
-
-                    <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank"><img
-                                src="icons/Bluesky_Logo.svg" alt="BlueSky"></a>BlueSky</div>
-
-                    <div class="card"><a href="https://www.instagram.com/thedoctorttv/" target="_blank"><img
-                                class="theme-icon" src="icons/Instagram_Glyph_Black.svg"
-                                data-light-icon="icons/Instagram_Glyph_Black.svg"
-                                data-dark-icon="icons/Instagram_Glyph_White.svg" alt="Instagram"></a>Instagram</div>
-
-                    <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img class="theme-icon"
-                                src="icons/github-mark.svg" data-light-icon="icons/github-mark.svg"
-                                data-dark-icon="icons/github-mark-white.svg" alt="GitHub"></a>Github</div>
-
-                    <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
-                                src='icons/Throne Icon - Single (Gradient).svg' alt='My Wishlist' /></a>Throne</div>
-
-                    <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='icons/ko-fi.svg'
-                                alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
-
-                    <div class="card"><a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
-                            target="_blank"><img src="icons/vrchat.svg" alt="VRChat Profile"></a>VRChat</div>
-
-                    <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
-                                src="icons/vrchat-group.svg" alt="VRChat Profile"></a>Group</div>
-
-                    <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img
-                                src="icons/LiveChart.webp" alt="LiveChart"></a>Anime</div>
-
-                    <div class="card"><a href="https://thetimevortex.net/discord" target="_blank"><img
-                                src="icons/Discord.svg" alt="Discord Server"></a>Discord</div>
+                    <div class="card"><a href="/thedoctorttv.html" target=""><img
+                                src="icons/TheDoctor-PFP.webp" alt="Youtube"></a>TheDoctorTTV</div>
                 </ul>
             </li>
 
@@ -152,7 +104,7 @@
     </div>
 
 
-    <div class="mc-container">
+    <!-- <div class="mc-container">
         <div class="minecraft-section">
             <h1>TheTimeVortex Create Modpack</h1>
             <br>
@@ -182,7 +134,7 @@
             <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
                 mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
         </div>
-    </div>
+    </div> -->
 
 
     <global-footer></global-footer>
