--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -12,11 +12,11 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description"
-        content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+        content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="header-footer.js"></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="/header-footer.js"></script>
+    <script type="text/javascript" src="/darkmode.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -52,7 +52,7 @@
                 anything like that. (No hate to those who use 'em, though.)
             </p>
             <div class="pfp-container">
-                <img class="pfp" src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
+                <img class="pfp" src="/icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
             </div>
         </div>
         <div class="discord">
@@ -72,46 +72,46 @@
             <li>
                 <ul class="social-page-icons">
                     <div class="card"><a href="https://youtube.com/@thedoctorttv" target="_blank"><img
-                                src="icons/youtube.svg" alt="Youtube"></a>Youtube</div>
+                                src="/icons/youtube.svg" alt="Youtube"></a>Youtube</div>
 
                     <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
-                                src="icons/twitch.svg" alt="Twitch"></a>Twitch</div>
+                                src="/icons/twitch.svg" alt="Twitch"></a>Twitch</div>
 
                     <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
-                                src="icons/kick-logo.svg" alt="Kick"></a>Kick</div>
+                                src="/icons/kick-logo.svg" alt="Kick"></a>Kick</div>
 
                     <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
-                            <img src="icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
+                            <img src="/icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
 
                     <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank"><img
-                                src="icons/Bluesky_Logo.svg" alt="BlueSky"></a>BlueSky</div>
+                                src="/icons/bluesky.svg" alt="BlueSky"></a>BlueSky</div>
 
                     <div class="card"><a href="https://www.instagram.com/thedoctorttv/" target="_blank"><img
-                                class="theme-icon" src="icons/Instagram_Glyph_Black.svg"
-                                data-light-icon="icons/Instagram_Glyph_Black.svg"
-                                data-dark-icon="icons/Instagram_Glyph_White.svg" alt="Instagram"></a>Instagram</div>
+                                class="theme-icon" src="/icons/Instagram_Glyph_Black.svg"
+                                data-light-icon="/icons/Instagram_Glyph_Black.svg"
+                                data-dark-icon="/icons/Instagram_Glyph_White.svg" alt="Instagram"></a>Instagram</div>
 
                     <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img class="theme-icon"
-                                src="icons/github-mark.svg" data-light-icon="icons/github-mark.svg"
-                                data-dark-icon="icons/github-mark-white.svg" alt="GitHub"></a>Github</div>
+                                src="/icons/github-mark.svg" data-light-icon="/icons/github-mark.svg"
+                                data-dark-icon="/icons/github-mark-white.svg" alt="GitHub"></a>Github</div>
 
                     <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
-                                src='icons/Throne Icon - Single (Gradient).svg' alt='My Wishlist' /></a>Throne</div>
+                                src='/icons/throne.svg' alt='My Wishlist' /></a>Throne</div>
 
-                    <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='icons/ko-fi.svg'
+                    <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='/icons/ko-fi.svg'
                                 alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
 
                     <div class="card"><a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
-                            target="_blank"><img src="icons/vrchat.svg" alt="VRChat Profile"></a>VRChat</div>
+                            target="_blank"><img src="/icons/vrchat.svg" alt="VRChat Profile"></a>VRChat</div>
 
                     <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
-                                src="icons/vrchat-group.svg" alt="VRChat Profile"></a>Group</div>
+                                src="/icons/vrchat-group.svg" alt="VRChat Profile"></a>Group</div>
 
                     <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img
-                                src="icons/LiveChart.webp" alt="LiveChart"></a>Anime</div>
+                                src="/icons/LiveChart.webp" alt="LiveChart"></a>Anime</div>
 
                     <div class="card"><a href="https://thetimevortex.net/discord" target="_blank"><img
-                                src="icons/Discord.svg" alt="Discord Server"></a>Discord</div>
+                                src="/icons/Discord.svg" alt="Discord Server"></a>Discord</div>
                 </ul>
             </li>
 
