--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
     <meta property="og:description"
-        content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+        content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
@@ -44,14 +44,16 @@
         <div class="main">
             <h1>About Us</h1>
             <p class="about-me">
-                We’re a group of creators, each bringing our own style and passion. 
+                We’re a group of creators, each bringing our own style and passion.
                 Together, we aim to entertain, connect, and create something bigger than ourselves
             </p>
         </div>
         <div class="discord">
             <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or any other plarforms that they may
-                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun and forgetting about the drama.</p>
+            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or
+                any other plarforms that they may
+                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
+                and forgetting about the drama.</p>
             <br><br>
             <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
@@ -63,8 +65,10 @@
             <br><br>
             <li>
                 <ul class="social-page-icons">
-                    <div class="card"><a href="/thedoctorttv.html" target=""><img
-                                src="icons/TheDoctor-PFP.webp" alt="Youtube"></a>TheDoctorTTV</div>
+                    <div class="card"><a href="/creators/thedoctorttv.html" target=""><img
+                                src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV"></a>TheDoctorTTV</div>
+                    <div class="card"><a href="/creators/azzy123.html" target=""><img
+                                src="PFPs/azzy123-pfp.webp" alt="Azzy123"></a>Azzy123</div>
                 </ul>
             </li>
 
