Fixed Mobile and Links text

--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
-    <meta property="og:description"
-        content="A group of creators making entertainment." />
+    <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="/header-footer.js"></script>
@@ -69,51 +68,102 @@
         <div class="socials">
             <h1>TheDoctorTTV's Social Media</h1>
             <br><br>
-            <li>
-                <ul class="social-page-icons">
-                    <div class="card"><a href="https://youtube.com/@thedoctorttv" target="_blank"><img
-                                src="/icons/youtube.svg" alt="Youtube"></a>Youtube</div>
+            <ul class="social-page-icons">
+                <li class="card">
+                    <a href="https://youtube.com/@thedoctorttv" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">Youtube</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://twitch.tv/thedoctorttv" target="_blank"> <img
-                                src="/icons/twitch.svg" alt="Twitch"></a>Twitch</div>
+                <li class="card">
+                    <a href="https://twitch.tv/thedoctorttv" target="_blank">
+                        <img src="/icons/twitch.svg" alt="Twitch">
+                        <span class="creator-name">Twitch</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://kick.com/thedoctorttv" target="_blank"> <img
-                                src="/icons/kick-logo.svg" alt="Kick"></a>Kick</div>
+                <li class="card">
+                    <a href="https://kick.com/thedoctorttv" target="_blank">
+                        <img src="/icons/kick-logo.svg" alt="Kick">
+                        <span class="creator-name">Kick</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://twitter.com/thedoctorttv" target="_blank">
-                            <img src="/icons/twitter.svg" alt="Twitter"></a>Twitter(X)</div>
+                <li class="card">
+                    <a href="https://twitter.com/thedoctorttv" target="_blank">
+                        <img src="/icons/twitter.svg" alt="Twitter">
+                        <span class="creator-name">Twitter (X)</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank"><img
-                                src="/icons/bluesky.svg" alt="BlueSky"></a>BlueSky</div>
+                <li class="card">
+                    <a href="https://bsky.app/profile/thedoctorttv.bsky.social" target="_blank">
+                        <img src="/icons/bluesky.svg" alt="BlueSky">
+                        <span class="creator-name">BlueSky</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://www.instagram.com/thedoctorttv/" target="_blank"><img
-                                class="theme-icon" src="/icons/Instagram_Glyph_Black.svg"
-                                data-light-icon="/icons/Instagram_Glyph_Black.svg"
-                                data-dark-icon="/icons/Instagram_Glyph_White.svg" alt="Instagram"></a>Instagram</div>
+                <li class="card">
+                    <a href="https://www.instagram.com/thedoctorttv/" target="_blank">
+                        <img class="theme-icon" src="/icons/Instagram_Glyph_Black.svg"
+                            data-light-icon="/icons/Instagram_Glyph_Black.svg"
+                            data-dark-icon="/icons/Instagram_Glyph_White.svg" alt="Instagram">
+                        <span class="creator-name">Instagram</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://github.com/TheDoctorTTV" target="_blank"><img class="theme-icon"
-                                src="/icons/github-mark.svg" data-light-icon="/icons/github-mark.svg"
-                                data-dark-icon="/icons/github-mark-white.svg" alt="GitHub"></a>Github</div>
+                <li class="card">
+                    <a href="https://github.com/TheDoctorTTV" target="_blank">
+                        <img class="theme-icon" src="/icons/github-mark.svg" data-light-icon="/icons/github-mark.svg"
+                            data-dark-icon="/icons/github-mark-white.svg" alt="GitHub">
+                        <span class="creator-name">GitHub</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href='https://throne.com/thedoctorttv' target='_blank'><img
-                                src='/icons/throne.svg' alt='My Wishlist' /></a>Throne</div>
+                <li class="card">
+                    <a href="https://throne.com/thedoctorttv" target="_blank">
+                        <img src="/icons/throne.svg" alt="My Wishlist">
+                        <span class="creator-name">Throne</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href='https://ko-fi.com/W7W85M9HD' target='_blank'><img src='/icons/ko-fi.svg'
-                                alt='Buy Me a Coffee at ko-fi.com' /></a>Ko-Fi</div>
+                <li class="card">
+                    <a href="https://ko-fi.com/W7W85M9HD" target="_blank">
+                        <img src="/icons/ko-fi.svg" alt="Ko-Fi">
+                        <span class="creator-name">Ko-Fi</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
-                            target="_blank"><img src="/icons/vrchat.svg" alt="VRChat Profile"></a>VRChat</div>
+                <li class="card">
+                    <a href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank">
+                        <img src="/icons/vrchat.svg" alt="VRChat Profile">
+                        <span class="creator-name">VRChat</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://vrc.group/DOCTOR.2543" target="_blank"><img
-                                src="/icons/vrchat-group.svg" alt="VRChat Profile"></a>Group</div>
+                <li class="card">
+                    <a href="https://vrc.group/DOCTOR.2543" target="_blank">
+                        <img src="/icons/vrchat-group.svg" alt="VRChat Group">
+                        <span class="creator-name">Group</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank"><img
-                                src="/icons/LiveChart.webp" alt="LiveChart"></a>Anime</div>
+                <li class="card">
+                    <a href="https://www.livechart.me/users/TheDoctorTTV/library" target="_blank">
+                        <img src="/icons/LiveChart.webp" alt="LiveChart">
+                        <span class="creator-name">Anime</span>
+                    </a>
+                </li>
 
-                    <div class="card"><a href="https://thetimevortex.net/discord" target="_blank"><img
-                                src="/icons/Discord.svg" alt="Discord Server"></a>Discord</div>
-                </ul>
-            </li>
+                <li class="card">
+                    <a href="https://thetimevortex.net/discord" target="_blank">
+                        <img src="/icons/Discord.svg" alt="Discord Server">
+                        <span class="creator-name">Discord</span>
+                    </a>
+                </li>
+            </ul>
+
 
         </div>
         <script>
