--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
     <meta property="og:type" content="website">
     <meta property="og:title" content="TheTimeVortex" />
-    <meta property="og:description"
-        content="A group of creators making entertainment." />
+    <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
     <script src="header-footer.js"></script>
@@ -63,14 +62,22 @@
         <div class="socials">
             <h1>Meet Our Creators</h1>
             <br><br>
-            <li>
-                <ul class="social-page-icons">
-                    <div class="card"><a href="/creators/thedoctorttv.html" target=""><img
-                                src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV"></a>TheDoctorTTV</div>
-                    <div class="card"><a href="/creators/azzy123.html" target=""><img
-                                src="PFPs/azzy123-pfp.webp" alt="Azzy123"></a>Azzy123</div>
-                </ul>
-            </li>
+            <ul class="social-page-icons">
+                <li class="card">
+                    <a href="/creators/thedoctorttv.html">
+                        <img src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
+                        <span class="creator-name">TheDoctorTTV</span>
+                    </a>
+                </li>
+
+                <li class="card">
+                    <a href="/creators/azzy123.html">
+                        <img src="PFPs/azzy123-pfp.webp" alt="Azzy123">
+                        <span class="creator-name">Azzy123</span>
+                    </a>
+                </li>
+            </ul>
+
 
         </div>
         <script>
