--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -68,93 +68,106 @@
         <div class="socials">
             <h1>Azzy123's Social Media</h1>
             <br><br>
-            <li>
-                <ul class="social-page-icons">
-                    <div class="card">
-                        <a href="https://www.youtube.com/@azzy1235" target="_blank">
-                            <img src="/icons/youtube.svg" alt="Youtube">
-                        </a>Youtube
-                    </div>
+            <ul class="social-page-icons">
+                <li class="card">
+                    <a href="https://www.youtube.com/@azzy1235" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">Youtube</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://www.twitch.tv/azzy123" target="_blank">
-                            <img src="/icons/twitch.svg" alt="Twitch">
-                        </a>Twitch
-                    </div>
+                <li class="card">
+                    <a href="https://www.twitch.tv/azzy123" target="_blank">
+                        <img src="/icons/twitch.svg" alt="Twitch">
+                        <span class="creator-name">Twitch</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://kick.com/azzy123" target="_blank">
-                            <img src="/icons/kick-logo.svg" alt="Kick">
-                        </a>Kick
-                    </div>
+                <li class="card">
+                    <a href="https://kick.com/azzy123" target="_blank">
+                        <img src="/icons/kick-logo.svg" alt="Kick">
+                        <span class="creator-name">Kick</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="http://scoresaber.com/u/76561198383153362" target="_blank">
-                            <img src="/icons/scoresaber.svg" alt="ScoreSaber">
-                        </a>ScoreSaber
-                    </div>
+                <li class="card">
+                    <a href="http://scoresaber.com/u/76561198383153362" target="_blank">
+                        <img src="/icons/scoresaber.svg" alt="ScoreSaber">
+                        <span class="creator-name">ScoreSaber</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="http://beatleader.xyz/u/2668/beatleader/date/1" target="_blank">
-                            <img src="/icons/beatleader.webp" alt="BeatLeader">
-                        </a>BeatLeader
-                    </div>
+                <li class="card">
+                    <a href="http://beatleader.xyz/u/2668/beatleader/date/1" target="_blank">
+                        <img src="/icons/beatleader.webp" alt="BeatLeader">
+                        <span class="creator-name">BeatLeader</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://discord.gg/YCMxKy8" target="_blank">
-                            <img src="/icons/discord.svg" alt="Discord">
-                        </a>Hazura
-                    </div>
+                <li class="card">
+                    <a href="https://discord.gg/YCMxKy8" target="_blank">
+                        <img src="/icons/discord.svg" alt="Discord">
+                        <span class="creator-name">Hazura</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://discord.gg/Jxg8AewSSZ" target="_blank">
-                            <img src="/icons/discord.svg" alt="Discord">
-                        </a>Crimson Flame
-                    </div>
+                <li class="card">
+                    <a href="https://discord.gg/Jxg8AewSSZ" target="_blank">
+                        <img src="/icons/discord.svg" alt="Discord">
+                        <span class="creator-name">Crimson Flame</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://www.youtube.com/@Asrielnotvods" target="_blank">
-                            <img src="/icons/youtube.svg" alt="Youtube">
-                        </a>Asriel VODs
-                    </div>
+                <li class="card">
+                    <a href="https://www.youtube.com/@Asrielnotvods" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">Asriel VODs</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://x.com/azzy123_" target="_blank">
-                            <img src="/icons/twitter.svg" alt="X">
-                        </a>Twitter / X
-                    </div>
+                <li class="card">
+                    <a href="https://x.com/azzy123_" target="_blank">
+                        <img src="/icons/twitter.svg" alt="X">
+                        <span class="creator-name">Twitter / X</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://bsky.app/profile/azzy123.bsky.social" target="_blank">
-                            <img src="/icons/bluesky.svg" alt="Bluesky">
-                        </a>Bluesky
-                    </div>
+                <li class="card">
+                    <a href="https://bsky.app/profile/azzy123.bsky.social" target="_blank">
+                        <img src="/icons/bluesky.svg" alt="Bluesky">
+                        <span class="creator-name">Bluesky</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://azzy123.carrd.co/#" target="_blank">
-                            <img src="/icons/carrd.webp" alt="Carrd">
-                        </a>Carrd
-                    </div>
+                <li class="card">
+                    <a href="https://azzy123.carrd.co/#" target="_blank">
+                        <img src="/icons/carrd.webp" alt="Carrd">
+                        <span class="creator-name">Carrd</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://trello.com/b/mycumrgi/commission-line" target="_blank">
-                            <img src="/icons/trello.svg" alt="Trello">
-                        </a>Trello
-                    </div>
+                <li class="card">
+                    <a href="https://trello.com/b/mycumrgi/commission-line" target="_blank">
+                        <img src="/icons/trello.svg" alt="Trello">
+                        <span class="creator-name">Trello</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://throne.com/azzy123" target="_blank">
-                            <img src="/icons/throne.svg" alt="Throne">
-                        </a>Throne
-                    </div>
+                <li class="card">
+                    <a href="https://throne.com/azzy123" target="_blank">
+                        <img src="/icons/throne.svg" alt="Throne">
+                        <span class="creator-name">Throne</span>
+                    </a>
+                </li>
 
-                    <div class="card">
-                        <a href="https://en.pronouns.page/@azzy123" target="_blank">
-                            <img src="/icons/pronoun.svg" alt="Pronouns">
-                        </a>Pronouns
-                    </div>
-                </ul>
-            </li>
+                <li class="card">
+                    <a href="https://en.pronouns.page/@azzy123" target="_blank">
+                        <img src="/icons/pronoun.svg" alt="Pronouns">
+                        <span class="creator-name">Pronouns</span>
+                    </a>
+                </li>
+            </ul>
+
 
 
         </div>
