Fixed Discord icon on azzy123 page

--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -106,14 +106,14 @@
 
                 <li class="card">
                     <a href="https://discord.gg/YCMxKy8" target="_blank">
-                        <img src="/icons/discord.svg" alt="Discord">
+                        <img src="/icons/Discord.svg" alt="Discord">
                         <span class="creator-name">Hazura</span>
                     </a>
                 </li>
 
                 <li class="card">
                     <a href="https://discord.gg/Jxg8AewSSZ" target="_blank">
-                        <img src="/icons/discord.svg" alt="Discord">
+                        <img src="/icons/Discord.svg" alt="Discord">
                         <span class="creator-name">Crimson Flame</span>
                     </a>
                 </li>
