--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                                 <li class="card">
                     <a href="/creators/hashvt.html">
-                        <img src="PFPs/hashvt.webp" alt="HashVT">
+                        <img src="PFPs/HashVT.webp" alt="HashVT">
                         <span class="creator-name">HashVT</span>
                     </a>
                 </li>
