Fixed discord server name

--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div class="discord">
-            <h1>TheTimeVortex Discord!</h1>
-            <p>Come Join the Treading Squad, you can get updates on me and now when I go live. </p>
+            <h1>Trending Squad Discord!</h1>
+            <p>Come Join the Trending Squad, you can get updates on me and now when I go live. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.com/invite/HgVsyVn" target="_blank">Join</a></h3>
         </div>
