--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -42,7 +42,7 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I'm HashVT
+                Hey, I'm HashVT. Your trending Tanuki basement dweller. Likes gaming & hunting shiny objects ^-^ [EN/FR]
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/HashVT.webp" alt="TheDoctorTTV">
