Update discord messages

--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -54,14 +54,12 @@
                 <img class="pfp" src="/PFPs/azzy123-pfp.webp" alt="Azzy123">
             </div>
         </div>
-        <!-- <div class="discord">
-            <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when I'm live on Twitch and YouTube, or you can just
-                chill with us, talk, game, or watch stuff. It's all about having fun and forgetting about the drama, you
-                know? </p>
+        <div class="discord">
+            <h1>Hazura the Kingdom of Magic Discord!</h1>
+            <p>Come join Hazura the Kingdom of Magic Discord Server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
-        </div> -->
+            <h3><a class="discordinvite" href="https://discord.gg/YCMxKy8" target="_blank">Join</a></h3>
+        </div>
     </div>
 
     <div class="social-container">
