--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -50,7 +50,7 @@
         </div>
         <div class="discord">
             <h1>Trending Squad Discord!</h1>
-            <p>Come Join the Trending Squad, you can get updates on me and now when I go live. </p>
+            <p>Come Join the Trending Squad Discord Server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://discord.com/invite/HgVsyVn" target="_blank">Join</a></h3>
         </div>
