Update about messages

--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -44,11 +44,13 @@
             <p class="about-me">
                 I am a VRChat Roleplayer and 3D Modeler, and Streamer.
                 <br>
-                Co-Owner of The Crimson Flame (Friend Group)
-                Head DM for The Vix Inn
-                I Actively Roleplay: The Vix Inn, Red Diamonds, & Your Cuppa RP
-                Current developer for Playinthirdperson (Beat Saber Mod)
-                Developer for The Sanctuary Mirage (VRChat World)
+                <ul>
+                    <li>Co-Owner of The Crimson Flame (Friend Group)</li>
+                    <li>Head DM for The Vix Inn</li>
+                    <li>I Actively Roleplay: The Vix Inn, Red Diamonds, & Your Cuppa RP</li>
+                    <li>Current developer for Playinthirdperson (Beat Saber Mod)</li>
+                    <li>Developer for The Sanctuary Mirage (VRChat World)</li>
+                </ul>
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/azzy123-pfp.webp" alt="Azzy123">
