--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -42,12 +42,12 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I'm TheDoctor, and this site's all about me! You can learn more about me and stay in touch through
+                Hey, I'm TheDoctor! You can learn more about me and stay in touch through
                 my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
                 this is my 121,027th regeneration.
                 <br><br>
-                I'm a huge weeb, I've seen tons of anime, I'm always checking out new stuff, and I'm into manga and
-                light novels. Oh, and fun fact: I built this whole website myself with HTML, no Wix, Squarespace, or
+                I'm a huge weeb, I've seen tons of anime, I'm always keeping up with new releases, and have read tons of manga and
+                light novels. Oh, and fun fact: I built this whole website myself, no Wix, Squarespace, or
                 anything like that. (No hate to those who use 'em, though.)
             </p>
             <div class="pfp-container">
