Major Update part 2
Added Havoc
Changed about message for all

--- a/creators/havocassassin.html
+++ b/creators/havocassassin.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="A group of creators making entertainment." />
     <meta property="og:url" content="https://thetimevortex.net" />
     <meta property="og:image" content="icons/WebsiteLogo.ico" />
-    <script src="header-footer.js"></script>
-    <script type="text/javascript" src="darkmode.js" defer></script>
+    <script src="/header-footer.js"></script>
+    <script type="text/javascript" src="/darkmode.js" defer></script>
     <script>
         (function () {
             const darkmode = localStorage.getItem('darkmode');
@@ -39,20 +39,18 @@
     <global-header></global-header>
 
     <div class="container">
-        <div class="banner-container"></div>
         <div class="main">
-            <h1>About Us</h1>
+            <h1>About Me</h1>
             <p class="about-me">
-                We’re a group of creators, each bringing our own style and passion.
-                Together, we aim to entertain, connect, and create something bigger than ourselves
+                Chaos is my co-pilot, madness is my fuel, and destruction is my brand. I’m <strong>TheHavocAssassin</strong>,welcome to the mayhem.
             </p>
+            <div class="pfp-container">
+                <img class="pfp" src="/PFPs/TheHavocAssassin.webp" alt="TheHavocAssassin">
+            </div>
         </div>
         <div class="discord">
-            <h1>TheTimeVortex Discord!</h1>
-            <p>Come join the Discord server! You'll get notified when any of our creators are live on Twitch, YouTube or
-                any other plarforms that they may
-                stream on. You can chill with us, talk, game, or participate in group watch. It's all about having fun
-                and forgetting about the drama.</p>
+            <h1>TheHavocAssassin Discord!</h1>
+            <p>Come join the Discord server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
             <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
         </div>
@@ -60,36 +58,35 @@
 
     <div class="social-container">
         <div class="socials">
-            <h1>Meet Our Creators</h1>
+            <h1>TheHavocAssassin's Social Media</h1>
             <br><br>
             <ul class="social-page-icons">
                 <li class="card">
-                    <a href="/creators/thedoctorttv.html">
-                        <img src="icons/TheDoctor-PFP.webp" alt="TheDoctorTTV">
-                        <span class="creator-name">TheDoctorTTV</span>
+                    <a href="https://www.youtube.com/@havocassassin" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">Youtube</span>
                     </a>
                 </li>
 
                 <li class="card">
-                    <a href="/creators/azzy123.html">
-                        <img src="PFPs/azzy123-pfp.webp" alt="Azzy123">
-                        <span class="creator-name">Azzy123</span>
+                    <a href="https://www.twitch.tv/thehavocassassin" target="_blank">
+                        <img src="/icons/twitch.svg" alt="Twitch">
+                        <span class="creator-name">Twitch</span>
                     </a>
                 </li>
 
-                                <li class="card">
-                    <a href="/creators/hashvt.html">
-                        <img src="PFPs/HashVT.webp" alt="HashVT">
-                        <span class="creator-name">HashVT</span>
+                <li class="card">
+                    <a href="https://discord.com/invite/vTRZbVK6yN" target="_blank">
+                        <img src="/icons/Discord.svg" alt="Discord Server">
+                        <span class="creator-name">Discord</span>
                     </a>
                 </li>
                                 <li class="card">
-                    <a href="/creators/havocassassin.html">
-                        <img src="PFPs/TheHavocAssassin.webp" alt="TheHavocAssassin">
-                        <span class="creator-name">TheHavocAssassin</span>
+                    <a href="https://www.youtube.com/@HavocAssassinVods" target="_blank">
+                        <img src="/icons/youtube.svg" alt="Youtube">
+                        <span class="creator-name">VODs</span>
                     </a>
                 </li>
-
             </ul>
 
 
@@ -127,41 +124,6 @@
             observer.observe(document.documentElement, { attributes: true, attributeFilter: ['class'] });
         </script>
     </div>
-
-
-    <!-- <div class="mc-container">
-        <div class="minecraft-section">
-            <h1>TheTimeVortex Create Modpack</h1>
-            <br>
-            <h3>Launcher Installation</h3>
-            <ul>
-                <li><a href="https://modrinth.com/modpack/thetimevortex-create" target="_blank">Modrinth Download</a>
-                </li>
-                <li><a href="https://www.curseforge.com/minecraft/modpacks/the-time-vortex-create"
-                        target="_blank">CurseForge Download</a></li>
-            </ul>
-            <br>
-            <h3>Manual Installation</h3>
-            <ul>
-                <li><a href="https://cdn.thetimevortex.net/TheTimeVortex-Create-Modpack-Manual-2.0.1.7z"
-                        target="_blank">Manual Download</a></li>
-                <li><a href="https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.0/forge-1.20.1-47.4.0-installer.jar"
-                        target="_blank">Forge Installer</a></li>
-            </ul>
-            <br>
-            <h3>Important Information</h3>
-            <p>When updating, please backup your <strong>journeymap</strong> folder to save your wavepoints.</p>
-            <p>Lastly, FTB mods aren't on Modrinth due to copyright issues.</p>
-            <br>
-            <h3>TheTimeVortex Create Server</h3>
-            <p>IP: <code class="server-ip">mc.thetimevortex.net</code></p>
-            <p>Fallback: <code class="server-ip">TheTimeVortexCreate.exaroton.me</code></p>
-            <p><strong>Server Availability:</strong> Not 24/7; whitelisted players can wake the server. The server will
-                mainly be up when TheDoctorttv is live on Twitch and Youtube.</p>
-        </div>
-    </div> -->
-
-
     <global-footer></global-footer>
 </body>
 
