--- a/creators/thedoctorttv.html
+++ b/creators/thedoctorttv.html
@@ -42,7 +42,7 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I'm TheDoctor! You can learn more about me and stay in touch through
+                Hey, I'm <strong>TheDoctor</strong>! You can learn more about me and stay in touch through
                 my YouTube, Twitch, Discord, and other social media. Basically, I'm a Time Lord turned Demon Lord, and
                 this is my 121,027th regeneration.
                 <br><br>
