--- a/creators/azzy123.html
+++ b/creators/azzy123.html
@@ -42,7 +42,7 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                I am a VRChat Roleplayer and 3D Modeler, and Streamer.
+                I am <Strong>Azzy123</Strong> a VRChat Roleplayer and 3D Modeler, and Streamer.
                 <br>
                 <ul>
                     <li>Co-Owner of The Crimson Flame (Friend Group)</li>
