--- a/creators/hashvt.html
+++ b/creators/hashvt.html
@@ -42,7 +42,7 @@
         <div class="main">
             <h1>About Me</h1>
             <p class="about-me">
-                Hey, I’m HashVT! Gaming is my passion, collecting shinies is my side quest, and basement dwelling is my main stat. Let’s go~ ^-^ [EN/FR]
+                Hey, I’m <strong>HashVT</strong>! Gaming is my passion, collecting shinies is my side quest, and basement dwelling is my main stat. Let’s go~ ^-^ [EN/FR]
             </p>
             <div class="pfp-container">
                 <img class="pfp" src="/PFPs/HashVT.webp" alt="TheDoctorTTV">
