--- a/creators/havocassassin.html
+++ b/creators/havocassassin.html
@@ -52,7 +52,7 @@
             <h1>TheHavocAssassin Discord!</h1>
             <p>Come join the Discord server, here you can talk, hangout and get notified when I go live. </p>
             <br><br>
-            <h3><a class="discordinvite" href="https://thetimevortex.net/discord" target="_blank">Join</a></h3>
+            <h3><a class="discordinvite" href="https://discord.com/invite/vTRZbVK6yN" target="_blank">Join</a></h3>
         </div>
     </div>
 
